2004-11-26 Magnus Hagdorn
 * extractCFstats.py: fixed bug

2004-11-25 Magnus Hagdorn
 * CF_loadfile.py: some minor fixes
 * CF_options.py: added -T switch to specify time slice rather than time
 * extractCFstats.py: new program for extracting EISMINT statistics

2004-11-23 Magnus Hagdorn
 * extractProfile.py: correct labeling for averaged quantities
 * plotEISMINT.py: much improved EISMINT plotter
 * CF_profilearea.py: slight bug with averaged quantities and is3d

2004-11-23 Magnus Hagdorn
 * CF_loadfile.py: appending _avg to a variable takes the vertical average of it

2004-11-18 Magnus Hagdorn
 * CF_loadfile.py: fix bug in temperature correction
 * CF_options.py: apply colourmaps to profiles as well

2004-11-10 Magnus Hagdorn
 * CF_area.py: added switch to plot mono images
 * CF_options.py: added switch to plot mono images
 * CF_loadfile.py: calculate fractional melt area
 * CF_createfile.py: produce CF compliant netCDF files
 * plotCFstats.py: plot melt fraction
 * plotCFstats.py: added switch to plot mono images

2004-11-04 Magnus Hagdorn
 * plot3DProfiles.py: plot more profiles per page
 * minor changes of plotEISMINT.py

2004-11-01 Magnus Hagdorn
 * CF_options.py: added number of input files
 * CF_profilearea.py: added text stamp to profile area
 * plot3DProfiles.py: new prog for plotting profiles from different files above each other

2004-10-22 Magnus Hagdorn
 * CF_area.py: plot profile line if requested
 * CF_colourmap.py: revert min/max finding algorithm
 * CF_loadfile.py: added ice surface variable, ie. topg+thk
 * CF_options.py: don't need to load plot options
 * CF_profilearea.py: add new class to plot multiple profiles above each other
 * plotCFvar.py: contour ice thickness/surface
 * plotProfile.py: change default size of profile plot
 * extractProfile.py: new program used for extracting data along profile
	
2004-10-22 Magnus Hagdorn
 * CF_IOrsl.py: new class for handling RSL data base
 * CF_rsl.py: plot RSL curve