@@ -22,33 +22,6 @@
 
 import PyCF,sys, Numeric
 
-stat_names = ["Volume [10^6km^3]:","Area [10^6km^2]:","Melt Frac:\t","Divide thick [m]:","Divide btemp [degC]:"]
-
-def getstats(cffile,time, eismint=False):
-    """Get ice statistics.
-
-    cffile: CF file object
-    time: time slice to be processed
-    eismint: set to True if it's an EISMINT 2 test (default: False)
-
-    returns a Numeric array: [volume, area, melt fraction]
-    if it's an eismint 2 file, then the array contains additionally [...,divide thickness,divide basal temp]"""
-
-    if eismint:
-        stats = Numeric.zeros([5],Numeric.Float)
-    else:
-        stats = Numeric.zeros([3],Numeric.Float)
-    stats[0] = cffile.getIceVolume(time=time,scale=1.e-15)
-    stats[1] = cffile.getIceArea(time=time,scale=1.e-12)
-    stats[2] = cffile.getFracMelt(time=time)
-    if eismint:
-        divide   = [len(cffile.file.variables['x1'][:])/2,len(cffile.file.variables['y1'][:])/2]
-        thick = cffile.getvar('thk')
-        stats[3] = thick.getSpotIJ(divide,time=time)
-        temp = cffile.getvar('temp')
-        stats[4] = temp.getSpotIJ(divide,time=time,level=-1)
-    return stats
-
 if __name__ == '__main__':
     # creating option parser
     parser = PyCF.CFOptParser(usage = """usage: %prog [options] infile1 [infile2 ... infileN] [compfile]
@@ -59,7 +32,7 @@ if __name__ == '__main__':
     if len(opts.args) > 1:
         cffile = opts.cffile(-1)
         time = opts.times(cffile)
-        stats_comp = getstats(cffile,time,True)
+        stats_comp = PyCF.CFgetstats(cffile,time,True)
         comp_title = cffile.title
     else:
         stats_comp = None
@@ -71,11 +44,11 @@ if __name__ == '__main__':
     for i in range(0,numfiles):
         cffile = opts.cffile(i)
         time = opts.times(cffile)
-        stats = getstats(cffile,time,True)
+        stats = PyCF.CFgetstats(cffile,time,True)
         out = []
         out.append("\t\t\t%s"%cffile.title)
         for i in range(0,len(stats)):
-            out.append("%s\t%f"%(stat_names[i],stats[i]))
+            out.append("%s\t%f"%(PyCF.CFstat_names[i],stats[i]))
         if stats_comp != None:
             out[0] = out[0]+'\t rel to %s'%comp_title
             for i in range(0,len(stats)):
