@@ -34,7 +34,8 @@ data_files = [('share/PyCF/',['data/ice.cpt',
                               'data/mb.cpt',
                               'data/temp.cpt',
                               'data/topo.cpt',
-                              'data/velo.cpt']),
+                              'data/velo.cpt',
+                              'data/eismint2.data']),
               ('bin',['progs/add_projinfo.py',
                       'progs/create_topo.py',
                       'progs/plotCFvar.py',
@@ -48,7 +49,8 @@ data_files = [('share/PyCF/',['data/ice.cpt',
                       'progs/extractProfile.py',
                       'progs/plotRSL.py',
 		      'progs/extractCFstats.py',
-                      'progs/ran_topo.py'])]
+                      'progs/ran_topo.py',
+                      'progs/plotEISMINT2stats.py'])]
 
 setup (name = "PyCF",
        version = "0.0",
